Fix scrolling and nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -49,11 +49,11 @@ body > button{
 }
 
 #nav-button-left{
-  left: 0;
+  left: 5px;
 }
 
 #nav-button-right{
-  right: 0;
+  right: 5px;
 }
 
 #nav-button-left:hover{
@@ -83,7 +83,7 @@ body > button{
 
 main{
   width: 100%;
-  height: calc(100% - 125px);
+  height: calc(100% - 15vw);
   position: relative;
 
   overflow: hidden;
@@ -162,7 +162,13 @@ main > article[data-status="after"]{
   padding-top: 2em;
   width: 80%;
   
+  text-align: justify;
+}
+
+.contact{
+  margin: 0.25em;
   text-align: center;
+  line-height: 32px;
 }
 
 .project .content-section{
@@ -293,8 +299,8 @@ main > article[data-status="after"]{
 */
 
 nav{
-  width: 100%;
-  height: 125px;
+  width: 100vw;
+  height: 10vw;
   bottom: 1vh;
   position: absolute;
   z-index: 2;
@@ -302,15 +308,15 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.25em;
+  gap: 0.2em;
 
   overflow-y: hidden;
   overflow-x: auto;
 }
 
 nav > .nav-item{
-  width: 80px;
-  padding: 0.5em;
+  width: 75px;
+  padding: 0.3em;
 
   display: flex;
   flex-shrink: 1;
@@ -359,16 +365,16 @@ nav::-webkit-scrollbar-thumb{
     overflow-y: auto;
   }
 
-  main::-webkit-scrollbar{
-    display: none;
-  }
-
   main > article{
     width: 95%;
     height: fit-content;
 
     flex-direction: column;
     align-items: center;
+  }
+
+  .home .content-section{    
+    text-align: left;
   }
 
   .project .gallery-section{
@@ -379,7 +385,7 @@ nav::-webkit-scrollbar-thumb{
   
   .project .content-section{
     width: 85%;
-    overflow: hidden;
+    overflow-y: auto;
   }
 
   .home .title{
